--- a/_config.yml
+++ b/_config.yml
@@ -79,10 +79,13 @@ minima:
 #       * title    Tooltip rendered on hovering over icon.
 #       * icon     Font Awesome icon id. `github` corresponds to `fa-github`.
 #       * url      Full URL of social profile.
-#   social_links:
-#     - title: Minima Theme repository at GitHub
-#       icon: github
-#       url: "https://github.com/jekyll/minima"
+  social_links:
+    - title: olafgrette
+      icon: github
+      url: "https://github.com/olafgrette"
+    - title: olafgrette
+      icon: linkedin
+      url: "https://www.linkedin.com/in/olafgrette/"
 #     - title: Jekyll at X (formerly Twitter)
 #       icon: x-twitter
 #       url: "https://x.com/jekyllrb"
