setup: description + reorder social links

--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,10 @@ author:
 #
 # The `>` after `description:` means to ignore line-breaks until next key. If
 #   you wish to omit the line-break after the end of text, use `>-` instead.
-# description: >
-#   Write an awesome description for your new site here. You can edit this line
-#   in _config.yml. It will appear in your document head meta (for Google search
-#   results) and in your feed.xml site description.
-
+description: >
+ Personal site and blog of Olaf Grette: software engineer and life long tinkerer.
+ I promise to sometimes make posts. Views and opinions expressed within are my own
+ and don't reflect the views of my employer, management chain, god himself, and so on.
 
 # Build settings
 # --------------
@@ -80,10 +79,13 @@ minima:
 #       * icon     Font Awesome icon id. `github` corresponds to `fa-github`.
 #       * url      Full URL of social profile.
   social_links:
-    - title: olafgrette
+    - title: olaf@grette.org
+      icon: envelope
+      url: "mailto:olaf@grette.org"
+    - title: olafgrette@github
       icon: github
       url: "https://github.com/olafgrette"
-    - title: olafgrette
+    - title: olafgrette@linkedin
       icon: linkedin
       url: "https://www.linkedin.com/in/olafgrette/"
 #     - title: Jekyll at X (formerly Twitter)
