nav: add resume link, remove redundant inline link from about

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ minima:
 #     the order they should be rendered.
   nav_pages:
     - about.md
+    - resume.md
 #
 #   Set to `true` to show excerpts on the homepage.
   show_excerpts: true
